# Rust

./: test.txt
actix_web_/: Cargo.toml
arr_p/: Cargo.toml
binary_f64/: Cargo.toml
binary_octal_hexadecimal/: Cargo.toml
binary_type/: Cargo.toml
closer_fn/: Cargo.toml
complex/: Cargo.toml
complex/src/: main.rs
ex_args/: Cargo.toml
ezytutors/: .env  Cargo.toml
ezytutors4/: Cargo.toml
ezytutors4/tutor-db/: Cargo.toml  database.sql
ezytutors4/tutor-db/src/: main.rs
file_in_out/: Cargo.toml
file_in_out1/: Cargo.toml  aaa.txt
filter/: Cargo.toml
fn_life_time/: Cargo.toml
fn_try_into/: Cargo.toml
fn_vec/: Cargo.toml
generic_match/: Cargo.toml
generic_token/: Cargo.toml
generic_token_impl/: Cargo.toml
generic_token_impl_copy/: Cargo.toml
generic_token_impl_num/: Cargo.toml
genrtic_token_impl_copy_where/: Cargo.toml
genrtic_token_impl_num_upgrade/: Cargo.toml
grep_lite/: Cargo.toml
grep_lite1/: Cargo.toml
grep_lite2/: Cargo.toml
grep_lite3/: Cargo.toml
hello/: hello.html
hello_0/: 404.html  Cargo.toml
intarray/: Cargo.toml
let_if/: Cargo.toml
literal/: Cargo.toml
loop_time_sleep_stdout/: Cargo.toml
loop_while/: Cargo.toml
madelbrot/: Cargo.toml
main_result/: Cargo.toml
match_ex/: Cargo.toml
match_guard/: Cargo.toml
node_ex/: Cargo.toml
node_ex2/: Cargo.toml
node_link/: Cargo.toml
node_rc_refcall_box/: Cargo.toml
node_test_1/: Cargo.toml
node_test_2/: Cargo.toml
node_weak/: Cargo.toml
node_weak_debug/: Cargo.toml
ref_print/: Cargo.toml
reference_match/: Cargo.toml
vec/src/: main.rs
(+106 files in other folders)
