[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"



[[bin]]
name = "tutor-db"
path = "src/bin/tutor-db.rs"



[dependencies]
#Actix web framework and run-time
actix-web = "4.1.0"
actix-rt = "2.7.0"

# Environment access
dotenv = "0.15.0"

# Database access
sqlx = {version = "0.6.2", default_features = false, features = ["postgres","runtime-tokio-native-tls", "macros","chrono"]}


# Data serialization library
serde = { version = "1.0.144", features = ["derive"] }

# Other utils
chrono = {version = "0.4.22", features = ["serde"]}
